added scan endpoint
